feat: expand internal APIs, notifications, and role flows